Don't leak g_get_current_dir() result

glib API documentation indicates:
« The returned string should be freed when no longer needed. »

https://bugzilla.gnome.org/show_bug.cgi?id=711085